--- a/HolaMundoThymeleaf/src/main/resources/templates/index.html
+++ b/HolaMundoThymeleaf/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 <body>
 
     <h1>Inicio</h1>
+    <a th:href="@{/agregar}">Crear Persona</a>
 
     <div th:if="${personas != null and !personas.empty}">
         <table border="1">
@@ -16,6 +17,8 @@
                 <th>Apellido</th>
                 <th>Email</th>
                 <th>Telefono</th>
+                <th>Editar</th>
+                <th>Eliminar</th>
             </tr>
 
             <tr th:each="persona,iterador : ${personas}">
@@ -24,6 +27,8 @@
                 <td th:text="${persona.apellido}">Apellido</td>
                 <td th:text="${persona.email}">Email</td>
                 <td th:text="${persona.telefono}">Telefono</td>
+                <td> <a th:href="@{/editar/} + ${persona.idPersona}" th:text="Editar"></a> </td>
+                <td> <a th:href="@{/eliminar(idPersona=${persona.idPersona})}" th:text="Eliminar"></a> </td>
             </tr>
 
         </table>
