--- a/HolaMundoThymeleaf/src/main/resources/templates/modificar.html
+++ b/HolaMundoThymeleaf/src/main/resources/templates/modificar.html
@@ -17,16 +17,19 @@
 
         <label>Nombre:</label>
         <input type="text" name="nombre" th:field="*{nombre}">
+        <span th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}">Error Nombre</span>
 
         <br/>
 
         <label>Apellido:</label>
         <input type="text" name="apellido" th:field="*{apellido}">
+        <span th:if="${#fields.hasErrors('apellido')}" th:errors="*{apellido}">Error Apellido</span>
 
         <br/>
 
         <label>Email:</label>
         <input type="email" name="email" th:field="*{email}">
+        <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error Email</span>
 
         <br/>
 
