--- a/HolaMundoThymeleaf/src/main/resources/templates/index.html
+++ b/HolaMundoThymeleaf/src/main/resources/templates/index.html
@@ -6,7 +6,8 @@
     </head>
 <body>
 
-    <h1>Inicio</h1>
+    <header th:replace="layout/plantilla :: header"></header>
+
     <a th:href="@{/agregar}">Crear Persona</a>
 
     <div th:if="${personas != null and !personas.empty}">
@@ -39,6 +40,8 @@
         La lista de personas está vacía
 
     </div>
+
+    <footer th:replace="layout/plantilla :: footer"></footer>
 
 </body>
 </html>
