--- a/HolaMundoThymeleaf/src/main/resources/templates/modificar.html
+++ b/HolaMundoThymeleaf/src/main/resources/templates/modificar.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-    <h1>Datos de la Persona:</h1>
+    <header th:replace="layout/plantilla :: header"></header>
+    <h2>Datos de la Persona:</h2>
     <a th:href="@{/}">Regresar</a>
 
     <br/>
@@ -41,6 +42,8 @@
         <input type="submit" name="guardar" value="guardar">
 
     </form>
+
+    <footer th:replace="layout/plantilla :: footer"></footer>
 
 </body>
 </html>
