--- a/HolaMundoThymeleaf/src/main/resources/templates/layout/plantilla.html
+++ b/HolaMundoThymeleaf/src/main/resources/templates/layout/plantilla.html
@@ -7,11 +7,11 @@
 <body>
 
     <header th:fragment="header">
-        <h1>Control de Clientes</h1>
+        <h1 th:text="#{plantilla.titulo}">Titulo</h1>
     </header>
 
     <footer th:fragment="footer">
-        <p>Derechos reservados</p>
+        <p> [[#{plantilla.pie-pagina}]] <a href="#" th:text="#{plantila.pie-pagina-url}"></a></p>
     </footer>
 
 </body>
