--- a/HolaMundoThymeleaf/src/main/resources/templates/layout/plantilla.html
+++ b/HolaMundoThymeleaf/src/main/resources/templates/layout/plantilla.html
@@ -11,7 +11,13 @@
     </header>
 
     <footer th:fragment="footer">
-        <p> [[#{plantilla.pie-pagina}]] <a href="#" th:text="#{plantila.pie-pagina-url}"></a></p>
+        <div>
+            <br>
+            <a th:href="@{/(lang=es)}">ES</a> |
+            <a th:href="@{/(lang=en)}">EN</a> |
+            <br>
+            <p> [[#{plantilla.pie-pagina}]] <a href="#" th:text="#{plantila.pie-pagina-url}"></a></p>
+        </div>
     </footer>
 
 </body>
