--- a/HolaMundoThymeleaf/src/main/resources/templates/index.html
+++ b/HolaMundoThymeleaf/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+                xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <meta charset="UTF-8">
         <title>Inicio</title>
@@ -8,7 +9,7 @@
 
     <header th:replace="layout/plantilla :: header"></header>
 
-    <a th:href="@{/agregar}">[[#{persona.crear}]]</a>
+    <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/agregar}">[[#{persona.crear}]]</a>
 
     <div th:if="${personas != null and !personas.empty}">
         <table border="1">
@@ -18,8 +19,8 @@
                 <th>[[#{persona.apellido}]]</th>
                 <th>[[#{persona.email}]]</th>
                 <th>[[#{persona.telefono}]]</th>
-                <th th:text="#{persona.editar}"></th>
-                <th th:text="#{persona.eliminar}"></th>
+                <th sec:authorize="hasRole('ROLE_ADMIN')" th:text="#{persona.editar}"></th>
+                <th sec:authorize="hasRole('ROLE_ADMIN')" th:text="#{persona.eliminar}"></th>
             </tr>
 
             <tr th:each="persona,iterador : ${personas}">
@@ -28,8 +29,8 @@
                 <td th:text="${persona.apellido}">Apellido</td>
                 <td th:text="${persona.email}">Email</td>
                 <td th:text="${persona.telefono}">Telefono</td>
-                <td> <a th:href="@{/editar/} + ${persona.idPersona}" th:text="#{persona.editar}"></a> </td>
-                <td> <a th:href="@{/eliminar(idPersona=${persona.idPersona})}" th:text="#{persona.eliminar}"></a> </td>
+                <td sec:authorize="hasRole('ROLE_ADMIN')"> <a th:href="@{/editar/} + ${persona.idPersona}" th:text="#{persona.editar}"></a> </td>
+                <td sec:authorize="hasRole('ROLE_ADMIN')"> <a th:href="@{/eliminar(idPersona=${persona.idPersona})}" th:text="#{persona.eliminar}"></a> </td>
             </tr>
 
         </table>
